@@ -1,4 +1,4 @@
-pytest
+pytest<4.0
 pytest-cov
 coveralls
 black
